# netbox-static-routes

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
netbox_static_routes/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  search.py  tables.py  urls.py  views.py
netbox_static_routes/api/: serializers.py  urls.py
netbox_static_routes/templates/netbox_static_routes/: staticroute.html
netbox_static_routes_communities/: __init__.py  forms.py  navigation.py  views.py
netbox_static_routes_communities/api/: serializers.py
